--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.4.4",
+    "framer-motion": "^5.3.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
