--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup": "node ./contentful/setup.js $CONTENTFUL_SPACE_ID $CONTENTFUL_MANAGEMENT_TOKEN"
   },
   "dependencies": {
     "@notionhq/client": "^0.4.4",
@@ -15,13 +16,18 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-modal": "^3.14.3",
-    "react-scroll": "^1.8.4"
+    "react-scroll": "^1.8.4",
+    "@contentful/rich-text-react-renderer": "^15.4.0",
+    "classnames": "2.3.1",
+    "contentful": "^9.1.34",
+    "date-fns": "2.28.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.8",
+    "contentful-import": "^7.8.7",
     "tailwindcss": "^2.2.16"
   }
 }
