--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@notionhq/client": "^0.4.4",
     "framer-motion": "^5.3.3",
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-modal": "^3.14.3",
     "react-scroll": "^1.8.4",
     "sharp": "^0.33.0"
