--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.4.4",
-    "framer-motion": "^5.3.3",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
+    "framer-motion": "^12.23.12",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.14.3",
     "react-scroll": "^1.8.4",
-    "sharp": "^0.33.0"
+    "save-dev": "0.0.1-security",
+    "sharp": "^0.33.0",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
