--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scroll": "^1.8.4",
     "save-dev": "0.0.1-security",
     "sharp": "^0.33.0",
+    "swiper": "^11.2.10",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
