--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@notionhq/client": "^0.4.4",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
+    "@types/react-slick": "^0.23.13",
     "framer-motion": "^12.23.12",
     "next": "^14.0.4",
     "react": "^18.2.0",
@@ -20,8 +21,10 @@
     "react-icons": "^5.5.0",
     "react-modal": "^3.14.3",
     "react-scroll": "^1.8.4",
+    "react-slick": "^0.31.0",
     "save-dev": "0.0.1-security",
     "sharp": "^0.33.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
     "typescript": "^5.9.2"
   },
