--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.19",
