--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.4.4",
+    "@types/gtag.js": "^0.0.20",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-slick": "^0.23.13",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.14.3",
     "react-scroll": "^1.8.4",
